# mcp-proxy

./: README.md  publish.sh  pyproject.toml
src/alibabacloud_mcp_proxy/: __main__.py  cli.py  config.py  discovery.py  precheck.py
src/alibabacloud_mcp_proxy/auth/: ims_access_token.py  token_provider.py
src/alibabacloud_mcp_proxy/proxy/: server.py
src/alibabacloud_mcp_proxy/session/: reconnecting_session.py
src/alibabacloud_mcp_proxy/transport/: upstream_http.py  upstream_sse.py
src/aliyun_mcp_proxy/: __main__.py  cli.py  config.py
src/aliyun_mcp_proxy/auth/: token_provider.py
src/aliyun_mcp_proxy/proxy/: server.py
src/aliyun_mcp_proxy/session/: reconnecting_session.py
src/aliyun_mcp_proxy/transport/: upstream_http.py
src/lazy/alibabacloud_mcp_proxy/: __main__.py  cli.py  config.py  discovery.py  precheck.py
src/lazy/alibabacloud_mcp_proxy/auth/: ims_access_token.py  token_provider.py
src/lazy/alibabacloud_mcp_proxy/proxy/: server.py
src/lazy/alibabacloud_mcp_proxy/session/: reconnecting_session.py
src/lazy/alibabacloud_mcp_proxy/transport/: upstream_http.py  upstream_sse.py
tests/: test_cli.py  test_ims_access_token.py  test_reconnecting_session.py  test_token_provider.py
