[project]
name = "alibabacloud-mcp-proxy"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "alibabacloud-credentials>=1.0.8",
    "alibabacloud-openapi-util>=0.2.4",
    "alibabacloud-tea-openapi>=0.4.4",
    "alibabacloud-tea-util>=0.3.14",
    "httpx>=0.28.1",
    "mcp>=1.27.0",
]

[project.scripts]
alibabacloud-mcp-proxy = "alibabacloud_mcp_proxy.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
